# LiquidGlass

./: README.md  build.gradle.kts  gradle.properties  index.html  metadata.json  package-lock.json  package.json  settings.gradle.kts  workspace.json
.acside/editor/: openedFiles.json  openedFiles.json.bak
.github/workflows/: build-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/liquidmusicglass/: AuthTest.kt  LibraryTest.kt  NavigationTest.kt  PlayerFullTest.kt  PlayerUiTest.kt  SearchTest.kt  SettingsTest.kt  SmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: automix_v2.tflite
app/src/main/cpp/: CMakeLists.txt  icmkey.c
app/src/main/kotlin/com/liquidmusicglass/: App.kt  MainActivity.kt
app/src/main/kotlin/com/liquidmusicglass/automix/: AutoMixController.kt  BPMDetector.kt  CrossfadeEngine.kt  DJEffectsEngine.kt  EnergyAnalyzer.kt  FFT.kt  FeatureExtractor.kt  KeyDetector.kt  MLTransitionPredictor.kt  MelSpectrogram.kt  ModelLoader.kt  SmartTransitionFinder.kt  TrackFeatures.kt  Transition.kt
app/src/main/kotlin/com/liquidmusicglass/engine/: AppSettings.kt  (+11 more)
app/src/main/res/drawable/: ic_launcher_foreground_new.xml  ic_notification_pause.xml  ic_notification_play.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
ci-reports/20260519_143936/: report.txt
docs/: icm_api_docs.md  icm_full_manual.md
gradle/: libs.versions.toml
scripts/: ci-apk-smoke-test.sh  ci-firebase-smoke-test.sh
scripts/ml_training/: COLAB_TRAINING_GUIDE.md
src/: App.tsx
(+63 files in other folders)
